# Ava

./: .gitignore  PROJECTS.md  pyproject.toml  requirements.txt  test_stt.py  usage.md
config/: personality.yaml  voices.yaml
docs/: README.md  phase-1.docs.md
scripts/: ava  ava-voice  ollama-server
src/: cli.py
src/core/: config.py  llm.py  logger.py  storage.py
src/voice/: assistant.py  stt.py  tts.py
voices/: README.md
