[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ava"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
